tests/ui/fail/simple.rs
//@error-in-other-file: Unsat

fn main() {
    let a: i64 = 1;
    assert!(a == 2);
}
